# windows-image-view

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-25-ux-optimization-v2-phase2.md  2026-05-25-ux-optimization-v2.md
docs/superpowers/specs/: 2026-05-25-ux-optimization-plan.md  2026-05-25-ux-optimization-v2.md
src/: AGENTS.md  App.css  App.tsx
src-tauri/: AGENTS.md  Cargo.toml  download-paddleocr.ps1  download-tesseract.ps1  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  commands.rs  exif.rs  file_assoc.rs  image_loader.rs  lib.rs  main.rs  ocr_engine.rs  paddle_ocr.rs  tesseract_ocr.rs
src/components/: AGENTS.md  AboutDialog.tsx  BatchConvertDialog.tsx  BatchRenameDialog.tsx  DebugPanel.tsx  DropOverlay.tsx  ExifPanel.tsx  ImageCanvas.tsx  ImageContextMenu.tsx  OcrSidebar.tsx  RightSidebar.tsx  SettingsDialog.tsx  ShortcutHelp.tsx  SlideshowOverlay.tsx  StatusBar.tsx  ThumbnailSidebar.tsx  Toolbar.tsx
src/hooks/: AGENTS.md  useAppUpdater.ts  useImageViewer.ts  useKeyboardShortcuts.ts  useSlideshow.ts  useWindowState.ts
src/lib/: api.ts  debug.ts  utils.ts
src/types/: index.ts
