[package]
name = "image-viewer-ocr"
version = "0.1.0"
edition = "2021"

[lib]
name = "image_viewer_ocr_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
kamadak-exif = "0.5"
winreg = "0.52"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
