[package]
name = "image-viewer-ocr"
version = "0.2.2"
edition = "2021"

[lib]
name = "image_viewer_ocr_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
kamadak-exif = "0.5"
trash = "5"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
]

[target.'cfg(windows)'.dependencies.winreg]
version = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
apple-vision = { version = "=0.15.1", default-features = false, features = ["recognize_text"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
